==> SwiperWitty/Core-Caven-ESP32/ESP32/freertos/main/driver/src/lcd.c <==
#include "lcd.h"
#include "lcdfont.h" //字库
#include "driver/spi_master.h"
#include "driver/gpio.h"

void LCD_GPIO_Init(int Set)
{
	if (Set)
	{
		gpio_pad_select_gpio(PIN_LCD_DC);
		gpio_set_direction(PIN_LCD_DC, GPIO_MODE_OUTPUT);

		gpio_pad_select_gpio(PIN_LCD_RST);
		gpio_set_direction(PIN_LCD_RST, GPIO_MODE_OUTPUT);

		LCD_RES_L();
		LCD_DC_H();
	}
	else
	{
	}
}

void LCD_Writ_Bus(U8 data)
{
	// SPI_Send_DATA(data);
	esp_err_t ret;
	spi_transaction_t t;

	memset(&t, 0, sizeof(t));						// Zero out the transaction
	t.length = 1 * 8;								// Len is in bytes, transaction length is in bits.
	t.tx_buffer = &data;							// Data
	ret = spi_device_polling_transmit(LCD_spi, &t); // Transmit!
	assert(ret == ESP_OK);							// Should have had no issues.
}

void LCD_Init(int Set)
{
#ifdef Exist_LCD
	LCD_GPIO_Init(Set);
	SPI_Start_Init(Set);
	LCD_WR_DATA8(0x00);

	LCD_Delay(200); // 等待电路复位完成
	#if 1
	LCD_RES_L();
	LCD_Delay(200); // 
	LCD_RES_H();
	LCD_Delay(200);
	#else
	LCD_WR_CMD(0x11); // Sleep out
	LCD_Delay(120);
	#endif
	LCD_WR_CMD(0x36);
	LCD_Delay(120);

	switch (LCD_HORIZONTAL)
	{
	case 0:
		LCD_WR_DATA8(0x00);
		break;
	case 1:
		LCD_WR_DATA8(0xC0);
		break;
	case 2:
		LCD_WR_DATA8(0x70);
		break;
	default:
		LCD_WR_DATA8(0xA0);
		break;
	}

	LCD_WR_CMD(0x3A);
	LCD_WR_DATA8(0x05);

	LCD_WR_CMD(0xB2);
	LCD_WR_DATA8(0x0C);
	LCD_WR_DATA8(0x0C);
	LCD_WR_DATA8(0x00);
	LCD_WR_DATA8(0x33);
	LCD_WR_DATA8(0x33);

	LCD_WR_CMD(0xB7);
	LCD_WR_DATA8(0x35);

	LCD_WR_CMD(0xBB);
	LCD_WR_DATA8(0x19);

	LCD_WR_CMD(0xC0);
	LCD_WR_DATA8(0x2C);

	LCD_WR_CMD(0xC2);
	LCD_WR_DATA8(0x01);

	LCD_WR_CMD(0xC3);
	LCD_WR_DATA8(0x12);

	LCD_WR_CMD(0xC4);
	LCD_WR_DATA8(0x20);

	LCD_WR_CMD(0xC6);
	LCD_WR_DATA8(0x0F);

	LCD_WR_CMD(0xD0);
	LCD_WR_DATA8(0xA4);
	LCD_WR_DATA8(0xA1);

	LCD_WR_CMD(0xE0);
	LCD_WR_DATA8(0xD0);
	LCD_WR_DATA8(0x04);
	LCD_WR_DATA8(0x0D);
	LCD_WR_DATA8(0x11);
	LCD_WR_DATA8(0x13);
	LCD_WR_DATA8(0x2B);
	LCD_WR_DATA8(0x3F);
	LCD_WR_DATA8(0x54);
	LCD_WR_DATA8(0x4C);
	LCD_WR_DATA8(0x18);
	LCD_WR_DATA8(0x0D);
	LCD_WR_DATA8(0x0B);
	LCD_WR_DATA8(0x1F);
	LCD_WR_DATA8(0x23);

	LCD_WR_CMD(0xE1);
	LCD_WR_DATA8(0xD0);
	LCD_WR_DATA8(0x04);
	LCD_WR_DATA8(0x0C);
	LCD_WR_DATA8(0x11);
	LCD_WR_DATA8(0x13);
	LCD_WR_DATA8(0x2C);
	LCD_WR_DATA8(0x3F);
	LCD_WR_DATA8(0x44);
	LCD_WR_DATA8(0x51);
	LCD_WR_DATA8(0x2F);
	LCD_WR_DATA8(0x1F);
	LCD_WR_DATA8(0x1F);
	LCD_WR_DATA8(0x20);
	LCD_WR_DATA8(0x23);

	LCD_WR_CMD(0x21);
	LCD_WR_CMD(0x11);
	LCD_WR_CMD(0x29);
	LCD_Delay(100);
	LCD_Fill(0, 0, LCD_W, LCD_H, BACK_COLOR);
#endif
}
